[package]
name = "uav-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
openmls = "0.4.1"
libp2p = {version = "0.51.3", features = ["async-std", "dns", "mdns", "gossipsub", "noise", "macros", "tcp", "websocket", "yamux", "floodsub", "quic", "mplex"]}
log = "0.4.17"
simple-logging = "2.0.2"
async-std = {version = "1.12.0", features = ["attributes", "async-io"]}
colored = "2.0.0"
libp2p-noise = "0.42.2"
libp2p-yamux = "0.43.1"
libp2p-mdns = "0.43.1"
openmls_rust_crypto = "0.1.0"
clearscreen = "2.0.1"
